fix layout issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -56,9 +56,9 @@ header {
 }
 main {
     display: grid;
-    grid-auto-flow: column;
-    grid-template-columns: 0.5fr 2fr;
-    gap: 2rem;
+    grid-template-columns: 350px 1fr;
+    grid-template-rows: 95vh 84px;
+    gap: 1rem;
     padding: 1rem;
 }
 .info-area, .log-area, .score-area, .button-area, .title, .info-footer, footer {
@@ -69,10 +69,8 @@ main {
     padding: 1rem;
 }
 .info-area {
-
-    .title {
-        width: 28ch;
-    }
+    overflow-y: scroll;
+    scrollbar-color: rgba(39, 0, 179, 0.842) rgb(133, 145, 255);
     gap: 2rem;
     text-align: center;
     display: flex;
@@ -80,6 +78,10 @@ main {
     justify-content: flex-start;
     align-items: center;
     padding-top: 1rem;
+
+    .title {
+        width: 28ch;
+    }
 
     .button-area {
         width: 28ch;
@@ -104,6 +106,7 @@ main {
     }
 
     .log-area{
+        flex-shrink: 0;
         display: flex;
         flex-flow: column;
         align-items: start;
@@ -120,7 +123,7 @@ main {
         }
     }
     .info-footer {
-        min-width: 28ch;
+        width: 28ch;
         summary {
             text-align: left;
         } 
@@ -134,17 +137,16 @@ main {
 }
 
 .game-area {
+    grid-row: span 2;
     display: flex;
     flex-wrap: wrap;
-    justify-items: center;
+    justify-content: center;
     align-items: center;
     gap: 2rem;
 }
 
 .board {
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-wrap: wrap;
     height: 700px;
     width: 700px;
@@ -198,15 +200,15 @@ button[class^="3"], div[class^="3"] {
     }
 }
 footer {
-    position: relative;
-    bottom: 4rem;
-    place-self: center;
-
-    width: 500px;
+    grid-column: 1;
+    grid-row: 2;
+    width: 40ch;
     padding: 1rem;
+    max-height: 6rem;
     & > ul {
         display: flex;
-        gap: 2rem;
+        font-size: 14px;
+        gap: 1rem;
         justify-content: space-around;
     }
 }
